--- a/X-ray Analysis/Base.lproj/Main.storyboard
+++ b/X-ray Analysis/Base.lproj/Main.storyboard
@@ -9,11 +9,64 @@
     </dependencies>
     <scenes>
         <!--View Controller-->
+        <scene sceneID="tLV-ET-MbP">
+            <objects>
+                <viewController id="TtG-JT-OWK" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WT9-F9-8yX">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z2g-bC-aQw">
+                                <rect key="frame" x="75" y="144" width="264" height="203"/>
+                                <string key="text">Upload your Radiology results below to gett a fast, easy, inexpensige second opinion.
+ We use AI to analyze your x-ray a provide a computer generated analysis. 
+You can also review your previously uploaded results.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mCP-aN-L3P">
+                                <rect key="frame" x="10" y="732" width="394" height="30"/>
+                                <state key="normal" title="Sign in"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="rcF-cI-Jx3"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S8M-9h-uxR">
+                                <rect key="frame" x="10" y="652" width="394" height="30"/>
+                                <state key="normal" title="Create an account"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="pcv-b6-M2n"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="uTg-M9-L4c"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="uTg-M9-L4c" firstAttribute="trailing" secondItem="z2g-bC-aQw" secondAttribute="trailing" constant="75" id="1bP-I9-CuH"/>
+                            <constraint firstItem="z2g-bC-aQw" firstAttribute="top" secondItem="uTg-M9-L4c" secondAttribute="top" constant="100" id="2QE-xQ-qhn"/>
+                            <constraint firstItem="uTg-M9-L4c" firstAttribute="trailing" secondItem="mCP-aN-L3P" secondAttribute="trailing" constant="10" id="4Ui-La-dIv"/>
+                            <constraint firstItem="z2g-bC-aQw" firstAttribute="leading" secondItem="uTg-M9-L4c" secondAttribute="leading" constant="75" id="6Ds-2U-pUg"/>
+                            <constraint firstItem="uTg-M9-L4c" firstAttribute="trailing" secondItem="S8M-9h-uxR" secondAttribute="trailing" constant="10" id="DeR-kv-ChI"/>
+                            <constraint firstItem="mCP-aN-L3P" firstAttribute="leading" secondItem="uTg-M9-L4c" secondAttribute="leading" constant="10" id="Lnv-sw-7mB"/>
+                            <constraint firstItem="mCP-aN-L3P" firstAttribute="top" secondItem="S8M-9h-uxR" secondAttribute="bottom" constant="50" id="Ny3-gF-zDc"/>
+                            <constraint firstItem="S8M-9h-uxR" firstAttribute="top" relation="greaterThanOrEqual" secondItem="z2g-bC-aQw" secondAttribute="bottom" constant="50" id="aET-fR-9ek"/>
+                            <constraint firstItem="uTg-M9-L4c" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="z2g-bC-aQw" secondAttribute="bottom" constant="250" id="bWh-tS-QlX"/>
+                            <constraint firstItem="uTg-M9-L4c" firstAttribute="bottom" secondItem="mCP-aN-L3P" secondAttribute="bottom" constant="100" id="dUy-UD-wIh"/>
+                            <constraint firstItem="S8M-9h-uxR" firstAttribute="leading" secondItem="uTg-M9-L4c" secondAttribute="leading" constant="10" id="yJD-vw-jvf"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q5J-G7-IKv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1800" y="-6"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="X_ray_Analysis" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="beY-hG-OFL">
@@ -39,15 +92,6 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GG5-Xz-p64">
-                                <rect key="frame" x="75" y="134" width="264" height="339"/>
-                                <string key="text">Upload your Radiology results below to gett a fast, easy, inexpensige second opinion.
- We use AI to analyze your x-ray a provide a computer generated analysis. 
-You can also review your previously uploaded results.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="X-plain My X-ray" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wKd-Uu-ViM">
                                 <rect key="frame" x="10" y="98" width="394" height="21"/>
                                 <constraints>
@@ -61,15 +105,11 @@ You can also review your previously uploaded results.</string>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="GG5-Xz-p64" firstAttribute="top" secondItem="wKd-Uu-ViM" secondAttribute="bottom" constant="15" id="Cox-UU-Ney"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="GG5-Xz-p64" secondAttribute="trailing" constant="75" id="FpG-OZ-RvZ"/>
                             <constraint firstItem="beY-hG-OFL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="400" id="GA3-BB-Tly"/>
                             <constraint firstItem="wKd-Uu-ViM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="MeF-km-rqJ"/>
                             <constraint firstItem="wKd-Uu-ViM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="Ujw-sX-Ckr"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wKd-Uu-ViM" secondAttribute="trailing" constant="10" id="Wev-vP-h6G"/>
-                            <constraint firstItem="GG5-Xz-p64" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="75" id="Zcb-uQ-Yai"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="beY-hG-OFL" secondAttribute="bottom" constant="100" id="j6L-Pc-8S0"/>
-                            <constraint firstItem="beY-hG-OFL" firstAttribute="top" secondItem="GG5-Xz-p64" secondAttribute="bottom" constant="15" id="lHd-4w-2cT"/>
                             <constraint firstItem="beY-hG-OFL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="t2Q-jb-Wxe"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="beY-hG-OFL" secondAttribute="trailing" constant="100" id="vry-Qy-MDw"/>
                         </constraints>
@@ -85,7 +125,7 @@ You can also review your previously uploaded results.</string>
             <objects>
                 <tableViewController id="qyw-1Z-9hF" customClass="PrevUploadsTableViewController" customModule="X_ray_Analysis" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="wug-OS-w2A">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
@@ -117,7 +157,7 @@ You can also review your previously uploaded results.</string>
             <objects>
                 <viewController id="Htq-V3-O5j" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lUL-EQ-iRt">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xray2" translatesAutoresizingMaskIntoConstraints="NO" id="y2i-Qf-w2i">
@@ -160,7 +200,7 @@ You can also review your previously uploaded results.</string>
             <objects>
                 <viewController id="0cG-qP-zw0" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OAO-bL-SAk">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UiX-H5-1Sx">
@@ -202,7 +242,7 @@ You can also review your previously uploaded results.</string>
             <objects>
                 <viewController id="eix-60-RLn" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="SIN-QI-Y70">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xray1" translatesAutoresizingMaskIntoConstraints="NO" id="Gnz-zL-995">
@@ -244,7 +284,7 @@ You can also review your previously uploaded results.</string>
             <objects>
                 <viewController id="JJ6-2w-qVs" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pFt-K2-bhy">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="50" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Fh-BU-z6L">
@@ -283,6 +323,7 @@ You can also review your previously uploaded results.</string>
         <!--Navigation Controller-->
         <scene sceneID="5lb-R9-syR">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eJS-B7-xLk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3BP-VO-MuT" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="K7c-Ji-he8">
@@ -294,13 +335,13 @@ You can also review your previously uploaded results.</string>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ESN-56-mW0"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="eJS-B7-xLk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1913.0434782608697" y="29.464285714285712"/>
+            <point key="canvasLocation" x="799" y="1"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="WdW-mY-aB2"/>
+        <segue reference="rcF-cI-Jx3"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="xray1" width="253.5" height="252"/>
